overflow fixes bio black dog

--- a/artists/black_dog/css/style.css
+++ b/artists/black_dog/css/style.css
@@ -294,6 +294,7 @@
 	
 	section.section-content {
 	margin-top: 20px;
+	margin-bottom: 50px;
 	position: relative;
 	width: 19%;
 	overflow: auto;
