--- a/fr/artists/black_dog/css/style.css
+++ b/fr/artists/black_dog/css/style.css
@@ -41,7 +41,7 @@
 	}
 	
 	a:hover{
-	color: #444444;
+	color: #696969;
 	}
 	
 	a:focus, a:active{
